--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="contato" id="contato">
         <hr>
         <h1>Contrate-nos</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque laudantium nobis magni pariatur voluptatibus aliquid enim, sed facilis iure. Laborum impedit temporibus consectetur fuga, culpa fugit consequuntur ut enim esse.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque laudantium nobis magni pariatur voluptatibus aliquid enim, sed facilis iure. Laborum impedit temporibus.</p>
         <div class="button_contato">
             <a href="/">Whatsapp</a>
         </div>
